public/css/main.css
/* ... */
.community-dashboard h2 {
    font-family: Arial, sans-serif;
    font-weight: bold;
    color: white;
    border-radius: 5px;
    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.8);
    padding: 8px 20px;
    margin: auto;
    display: flex;
    align-items: center; /* Align logo & text in one row */
    gap: 10px; /* Adds space between logo and text */
}

.community-icon {
    width: 40px; /* Adjust the size of the logo */
    height: auto;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------ */

/* Footer Section */

.footer {
    justify-content: space-between;
    align-items: center;
    padding: 5px;
    background-color: #272930;
    box-shadow: 4px 5px 17px 4px #db4f56;
}

.footer p {
    /* color: rgb(255, 255, 255); */
    text-decoration: none;
    margin: 0 15px;
    font-weight: bold;
    color: rgb(0, 0, 0);
}

.copyright {
    color: white;
    text-decoration: none;
    font-size: 15px;
    border: none;
    background: none;
    font-weight: 750;
    font-family: 'Poppins', sans-serif;
    margin-left: 15px; /* Adjust space between loader and text */
  }
  
.copyright::before {
    margin-left: auto;
  }
  
.copyright::after, .copyright::before {
    content: '';
    width: 0%;
    height: 2px;
    background: #f44336;
    display: block;
    transition: 0.5s;
  }
  
.copyright:hover::after, .copyright:hover::before {
    width: 100%;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------ */

.navbar-container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    width: 100%;
    gap: 10px;
    flex-wrap: wrap;
}

/* Administrator Button */ 

.admin-dashboard-button {
    padding: 0.1em 0.25em;
    width: 16em;
    height: 4.2em;
    background-color: #212121;
    border: 0.08em solid #fff;
    border-radius: 0.3em;
    font-size: 11px;
    cursor: pointer;
    margin-left: auto;
    margin-right: 20px;
}

.admin-nav-button {
    width: 7em;
    height: 2.8em;
    font-size: 10px;
    margin-left: 0;
    margin-right: 0;
    padding: 0;
}

.admin-nav-button span {
    width: 6em;
    height: 2em;
    font-size: 1em;
    bottom: 0;
    box-shadow: 0 0.3em 0.1em 0.019em #fff;
}
  
.admin-dashboard-button span {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    bottom: 0.4em;
    width: 11em; /* Increased width to fit text */
    height: 2.5em;
    background-color: #212121;
    border-radius: 0.2em;
    font-weight: bold; /* Make it bold */
    font-size: 1.4em; /* Keeping size balanced */
    color: #fff;
    border: 0.08em solid #fff;
    box-shadow: 0 0.4em 0.1em 0.019em #fff;
}
  
.admin-dashboard-button span:hover {
    transition: all 0.5s;
    transform: translate(0, 0.4em);
    box-shadow: 0 0 0 0 #fff;
}
  
.admin-dashboard-button span:not(hover) {
    transition: all 1s;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------ */

/* Copyright animation */

.configure-border-1 {
    width: 25px;
    height: 25px;
    padding: 1.5px;
    position: absolute;
    margin-right: 1500px;
    display: flex;
    justify-content: center;
    align-items: center;
    background: #fb5b53;
    animation: configure-clockwise 3s ease-in-out 0s infinite alternate;
}
  
.configure-border-2 {
    width: 25px;
    height: 25px;
    padding: 1.5px;
    left: -25px;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgb(63, 249, 220);
    transform: rotate(45deg);
    animation: configure-xclockwise 3s ease-in-out 0s infinite alternate;
}
  
.configure-core {
    width: 100%;
    height: 100%;
    background-color: #1d2630;
}
  
@keyframes configure-clockwise {
    0% {
      transform: rotate(0);
    }
    25% {
      transform: rotate(90deg);
    }
    50% {
      transform: rotate(180deg);
    }
    75% {
      transform: rotate(270deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
  
@keyframes configure-xclockwise {
    0% {
      transform: rotate(45deg);
    }
    25% {
      transform: rotate(-45deg);
    }
    50% {
      transform: rotate(-135deg);
    }
    75% {
      transform: rotate(-225deg);
    }
    100% {
      transform: rotate(-315deg);
    }
}
  
/* ------------------------------------------------------------------------------------------------------------------------------------------------ */

/* Social Media's Section */

.social-media-buttons {
    cursor: pointer;
    width: 50px;
    height: 50px;
    border-radius: 50px;
    border: none;
    position: relative;
    z-index: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 10px;
    transition: 0.1s;
}

/* Icon Styling */
.social-media-buttons img {
    width: 24px;
    height: 24px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* Instagram Button */
.instagram {
    background: linear-gradient(120deg, #833ab4, #fd1d1d, #fcb045);
}

/* YouTube Button */
.youtube {
    background: linear-gradient(120deg, #ff0000, #cc0000); /* YouTube Red */
}

/* bluesky Button */
.bluesky {
    background: linear-gradient(120deg, #87CEEB, #0085ff);
}

/* Twitter (X) Button */
.twitter {
    background: rgb(0, 0, 0);
}

/* Discord Button */
.discord {
    background: #5865F2;
}

/* Button Click Effect */
.social-media-buttons:active {
    transform: scale(0.85);
}

.social-media-buttons::before {
    content: "";
    position: absolute;
    width: 55px;
    height: 55px;
    background-color: #272930;
    border-radius: 50px;
    z-index: -1;
    border: 0px solid rgba(255, 255, 255, 0.411);
    transition: 0.4s;
}

.social-media-buttons:hover::before {
    width: 0px;
    height: 0px;
}
/* ... */

